# ai_alive

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt  start_app.py
config/: ai_config.example.yaml  emergent_config.yaml.example
docs/: START_MODES.md  configuration.md  deployment.md  development.md  emergent_mode_v3.md  quick_start.md
scripts/: create_venv.bat  create_venv.sh
shelter-ui/: .env.example  package-lock.json  package.json
shelter-ui/src/: App.css  App.js
shelter-ui/src/components/: AICard.js  AIHistory.js  AIStatus.js  ActionLog.js  GameOverScreen.js  MessageTransmit.js  PublicMessages.js  VoteResults.js  index.js
shelter_app/: api.py  app.py  run.py
shelter_core/: agent.py  emergent_agent_v3.py  emergent_shelter_v3.py  model_wrapper.py  shelter.py  shelter_logging.py
shelter_ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
shelter_ui/src/: App.tsx  index.css  vite-env.d.ts
shelter_ui/src/services/: api.ts
shelter_ui/src/stores/: appStore.ts
shelter_ui/src/types/: index.ts
shelter_ui/src/utils/: index.ts
tests/: AI_GUIDE.md  __init__.py  __main__.py  config.py  run_all.py  run_api_test.py
tests/core/: __init__.py  api_case.py  base.py  reporter.py  runner.py
tests/reports/: report_20260131_175148.json  report_20260131_175305.json  report_20260131_180910.json  report_20260131_180910.md
tests/suites/: __init__.py
tests/suites/api/: __init__.py  test_ai_detail.py  test_ai_list.py  test_live_state.py  test_reset.py  (+2 more)
tools/: check_ports.py  restart_api.py
(+21 files in other folders)
