[project]
name = "ai-shelter"
version = "1.0.0"
description = "AI Shelter - Multi-Agent Survival Simulation"
authors = [
    {name = "AI Shelter Team"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.9.0",
    "python-multipart==0.0.6",
    "pyyaml==6.0.2",
    "openai==1.44.0",
    "httpx==0.27.2"
]

[project.urls]
"Homepage" = "https://github.com/zhengtumd/ai_alive"